<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="InputOutput" Id="{a6699879-93a2-4411-bbc7-67d77daa114b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// prima macchina
	pStart	AT %I*	:	BOOL;
	pStop	AT %I*	:	BOOL;
	H1		AT %Q*	:	BOOL;
	// seconda macchina
	pStart2	AT %I*	:	BOOL;
	pStop2	AT %I*	:	BOOL;
	H2		AT %Q*	:	BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>